<resources>
    <string name="app_name">AndroidIntro</string>
    <string name="btn_set_app_message">Application text</string>
    <string name="btn_inflated_activity">Inflated activity</string>
    <string name="btn_dynamic_activity">Dynamic activity</string>
    <string name="btn_mail">Mail</string>
    <string name="btn_service_activity">Service activity</string>
    <string name="btn_state_activity">State activity</string>
    <string name="hint_intent_message">Intent message</string>
    <string name="btn_listen">Listen</string>
    <string name="btn_enough">Enough</string>
    <string name="btn_start_service">Start service</string>
    <string name="btn_stop_service">Stop service</string>
    <string name="btn_start_timer">Start timer</string>
    <string name="btn_stop_timer">Stop timer</string>
    <string name="timer_value">Timer count: %d</string>
    <string name="hint_input_state">Input state</string>
</resources>